--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css">
       <style>
         html, body {
+          margin: 0;
           height: 100%;
         }
 
